# bookprice-ai

./: .env.example  BOOKPRICE_PROJECT_PLAN.md  mcpize.yaml  pyproject.toml  server.py
utils/: __init__.py  book_data.py  pricing_engine.py  providers_jisu.py  providers_kongfz.py
