[project]
name = "bookprice-ai"
version = "0.1.0"
description = "AI-powered pricing and selection tool for second-hand book sellers. MCP Server + Rule Engine."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
bookprice = "server:main"
